--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1703,3 +1703,35 @@ section {
   font-size: 13px;
   padding-top: 5px;
 }
+
+.center-table {
+  margin: 0 auto;
+  border: 4px solid black;
+  border-collapse: collapse;
+}
+
+.center-table th,
+.center-table td {
+  border: 2px solid gray;
+  padding: 8px;
+  text-align: center;
+}
+
+.center-table th {
+  color: #5ab652;
+  font-weight: bold;
+}
+
+.center-table tbody td {
+  color: black;
+}
+
+.center-table tbody td:first-child {
+  color: #3399ff;
+  font-weight: bold;
+}
+
+.center-table tbody td:last-child {
+  color: #6a0dad;
+  font-weight: bold;
+}
