--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1704,34 +1704,93 @@ section {
   padding-top: 5px;
 }
 
-.center-table {
+.center-tablet1 {
   margin: 0 auto;
   border: 4px solid black;
   border-collapse: collapse;
 }
 
-.center-table th,
-.center-table td {
+.center-tablet1 th,
+.center-tablet1 td {
   border: 2px solid gray;
   padding: 8px;
   text-align: center;
 }
 
-.center-table th {
+.center-tablet1 th {
   color: #5ab652;
   font-weight: bold;
 }
 
-.center-table tbody td {
+.center-tablet1 tbody td {
   color: black;
 }
 
-.center-table tbody td:first-child {
+.center-tablet1 tbody td:first-child {
   color: #3399ff;
   font-weight: bold;
 }
 
-.center-table tbody td:last-child {
+.center-tablet1 tbody td:last-child {
   color: #6a0dad;
   font-weight: bold;
 }
+
+.center-tablet2 {
+  margin: 0 auto;
+  border: 4px solid black;
+  border-collapse: collapse;
+  width: max-content;
+}
+
+.center-tablet2 th,
+.center-tablet2 td {
+  border: 2px solid gray;
+  padding: 8px 12px;
+  text-align: center;
+}
+
+.center-tablet2 th:nth-child(3) {
+  color: red;
+  font-weight: bold;
+}
+
+.center-tablet2 th:nth-child(4) {
+  color: purple;
+  font-weight: bold;
+}
+
+.center-tablet2 th:nth-child(5) {
+  color: deeppink;
+  font-weight: bold;
+}
+
+.center-tablet2 tbody td:first-child {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.center-tablet2 tbody td:last-child {
+  font-weight: bold;
+}
+
+.center-tablet2 tbody td:nth-child(3) a {
+  color: red;
+  text-decoration: none;
+}
+
+.center-tablet2 tbody td:nth-child(4) a {
+  color: purple;
+  text-decoration: none;
+}
+
+.center-tablet2 tbody td:nth-child(5) a {
+  color: deeppink;
+  text-decoration: none;
+}
+
+.centrado {
+  text-align: center;
+  color: black;
+}
+
