--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1791,6 +1791,10 @@ section {
 
 .centrado {
   text-align: center;
-  color: black;
+}
+
+.centradonegro{
+    text-align: center;
+    color: black;
 }
 
