--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
 }
 
+#mapa {
+  width: 100%;
+  height: 500px;
+  border: 4px solid #000;
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
